Make redis and push server optional (and configurable)
(Both are disabled by default)

--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -113,8 +113,16 @@ defaults: &defaults
   #    :secret: 
   
   heroku: <%= !!ENV['HEROKU_TYPE'] %>
-  juggernaught:
+  redis: false
+  redis_config:
+    url: redis://127.0.0.1:6379/0
+    #host: 127.0.0.1
+    #port: 6379
+    #password: papapa
+    #path: /tmp/redis.sock
+  juggernaut:
     port: 8080
+  push_new_activities: false
 
 development:
   <<: *defaults
