Private options populated in javascript

--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -137,7 +137,7 @@ defaults: &defaults
   - "*.datetime"
   - "*.calendar"
   - "*.time"
-  - "*.comments.new.assigned_to_nobody"
+  - "*.comments"
   - "*.roles"
   - "*.common"
   - "*.tasks"
