--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -13,12 +13,14 @@
 src_files:
   - app/javascripts/lib/prototype.js
   - app/javascripts/lib/underscore.js
+  - app/javascripts/lib/underscore.date.js
   - app/javascripts/lib/jquery.js
   - app/javascripts/lib/backbone-prototype.js
   - app/javascripts/lib/handlebars.js
   - app/javascripts/teambox.js
   - app/javascripts/modules/loader.js
   - app/javascripts/modules/params.js
+  - app/javascripts/models/task.js
 
 # stylesheets
 #
