started grouping feature

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -23,6 +23,7 @@ src_files:
   - app/javascripts/modules/params.js
   - app/javascripts/models/task.js
   - app/javascripts/views/task.js
+  - app/javascripts/helpers/tasks.js
 
 # stylesheets
 #
