--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -17,12 +17,24 @@ src_files:
   - app/javascripts/lib/jquery.js
   - app/javascripts/lib/backbone-prototype.js
   - app/javascripts/lib/handlebars.js
+  - public/trimmer/*.js
   - app/javascripts/teambox.js
 
   - app/javascripts/modules/loader.js
   - app/javascripts/modules/params.js
+
+  - app/javascripts/helpers/handlebars.js
+
   - app/javascripts/models/task.js
+  - app/javascripts/models/thread.js
+
+  - app/javascripts/collections/threads.js
+
   - app/javascripts/views/task.js
+  - app/javascripts/views/comment_form.js
+  - app/javascripts/views/thread.js
+  - app/javascripts/views/activities.js
+
   - app/javascripts/helpers/tasks.js
 
 # stylesheets
