--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -17,7 +17,7 @@ src_files:
   - app/javascripts/lib/jquery.js
   - app/javascripts/lib/backbone-prototype.js
   - app/javascripts/lib/handlebars.js
-  - public/trimmer/*.js
+  - public/trimmer/en.js
   - app/javascripts/teambox.js
 
   - app/javascripts/modules/loader.js
@@ -34,6 +34,7 @@ src_files:
   - app/javascripts/views/comment_form.js
   - app/javascripts/views/thread.js
   - app/javascripts/views/activities.js
+  - app/javascripts/views/sidebar.js
 
   - app/javascripts/helpers/tasks.js
 
