--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -18,6 +18,7 @@ src_files:
   - app/javascripts/lib/backbone-prototype.js
   - app/javascripts/lib/handlebars.js
   - public/trimmer/en.js
+  - app/javascripts/datetime.js
   - app/javascripts/teambox.js
 
   - app/javascripts/modules/loader.js
