Adding conditional ie7 comment to load ie7 fix stylesheet

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -18,3 +18,5 @@ stylesheets:
     - public/stylesheets/sessions.css
     - public/stylesheets/public.css
     - public/stylesheets/sites.css
+  ie7:
+    - public/stylesheets/app_ie7_fix.css
