Adding activerecord keys to trimmer

--- a/config/teambox.yml
+++ b/config/teambox.yml
@@ -148,6 +148,7 @@ defaults: &defaults
   - "*.tasks"
   - "*.projects"
   - "*.conversations"
+  - "*.activerecord"
 
 development:
   <<: *defaults
